# ftml

./: .editorconfig  .rustfmt.toml  .tarpaulin.toml  CODEOWNERS  Cargo.toml  README.md
.github/: codecov.yml  dependabot.yaml
.github/workflows/: build.yaml  config.yaml
conf/: blocks.schema.toml  blocks.toml
docs/: Blocks.md  TreeTests.md
examples/: dump_json.rs  validate_json.rs
misc/: ast-test-template.json  header.txt
proptest-regressions/preproc/: test.txt
scripts/: check_conf-requirements.txt  check_conf.py  dump_json.sh  validate_json.sh
src/: id_prefix.rs  info.rs  layout.rs  lib.rs  macros.rs  next_index.rs  non_empty_vec.rs  text.rs  tokenizer.rs  url.rs  utf16.rs
src/data/: backlinks.rs  karma.rs  mod.rs  page_info.rs  page_ref.rs  score.rs  user_info.rs
src/includes/: grammar.pest  include_ref.rs  mod.rs  parse.rs  test.rs
src/parsing/: boolean.rs  check_step.rs  condition.rs  consume.rs  depth.rs  element_condition.rs  error.rs  lexer.pest  macros.rs  mod.rs  outcome.rs  parser.rs  parser_wrap.rs  result.rs  string.rs  strip.rs
src/preproc/: mod.rs  test.rs  (+2 more)
test/: .gitignore  align-center.json  align-deep.json  align-fail.json  align-justify.json  align-left.json  align-right.json  anchor-alias-star-empty.json  anchor-alias-star.json  anchor-alias-wrap.json  anchor-alias.json  anchor-empty.json  anchor-name-dash.json  anchor-name-fail-space.json  anchor-name-fail-space2.json  anchor-name-fail.json  anchor-name-multiple.json  anchor-name-space.json  anchor-name-symbol.json  anchor-name.json  anchor-star-empty.json  anchor-star.json  anchor-wrap.json  anchor-xss-2.json  anchor-xss-2.txt  anchor-xss-3.html  anchor-xss-3.json  anchor-xss-3.txt  anchor-xss.json  anchor.json  anchor2-alias-star-empty.json  anchor2-alias-star.json  anchor2-alias-wrap.json  anchor2-alias.json  anchor2-empty.json  anchor2-newlines-2.json  anchor2-newlines.json  anchor2-paragraph.json  anchor2-star-empty.json  anchor2-star.json  (+640 more)
(+561 files in other folders)
